fix getLast/addLast